incorrect gdb version detection

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2012-06-13  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2012-10-18  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
+	* gdb.py: Fix gdb version detection.
 	* vim.py: Fix mapkeys lost in a new gdb session.
 
 ===============================================================================
