add the 'commands' pdb command

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2013-02-3  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
+2013-02-7  Xavier de Gaye <xdegaye at users dot sourceforge dot net>
 
-	* pydb.py debugger.py gdb.py: pdb script output redirection.
+	* pydb.py: Add the 'commands' pdb command.
+	* pydb.py debugger.py gdb.py netbeans.py: pdb script output redirection.
 	* setup.py pydb.py vim.py: Replace pdb with pdb-clone.
 	* pydb.py: When the Python script is started from Vim with the command
 	':Pyclewn pdb script.py', the script is terminated after the 'quit'
