--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,17 @@
 News
 ====
 
+Pyclewn 1.11
+------------
+
+.. July 11, 2013
+
+Bug fix
+^^^^^^^
+
+* Fix gdb version detection on linux Suse 12.2 that prints a gdb header not
+  conformant to GNU standards.
+
 Pyclewn 1.10
 ------------
 
