--- a/NEWS
+++ b/NEWS
@@ -4,13 +4,14 @@ News
 Pyclewn 2.0
 -----------
 
-.. December 9, 2014
+.. December 16, 2014
 
 Changes
 ^^^^^^^
 
 * Windows support has been removed. Pyclewn requires now Python 2.7 or Python
   3.1 or newer and the same source code is used for all the Python versions.
+  pdb-clone must now be installed separately from PyPi.
 
 * The pyclewn command line optional argument selects which debugger to run.
 
