--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ News
 Pyclewn 2.0
 -----------
 
-.. January 3, 2015
+.. January 8, 2015
 
 Changes
 ^^^^^^^
@@ -18,17 +18,17 @@ Changes
 * The terminal spawned by the ``inferiortty`` command is now automatically
   closed at the end of each debugging session.
 
-* Use now asyncio (or trollius on Python versions that do not support asyncio)
-  instead of the deprecated asyncore module.
+* Use now asyncio (or trollius on Python versions that do not support asyncio,
+  i.e. version 2.7 or older than 3.4) instead of the deprecated asyncore
+  Python module.
+
+* Local installation is done using the user scheme instead of the home scheme.
 
 Bug fix
 ^^^^^^^
 
-* On Red Hat and Fedora Core, in the home installation scheme, the
-  library is installed at $HOME/lib64/python instead of $HOME/lib/python.
-
 * The controlling terminal of the gdb inferior process is now correctly set to
-  the terminal that is used to start the ``pyclewn`` progam.
+  the terminal that is used to start the ``pyclewn`` program.
 
 Pyclewn 1.11
 ------------
