--- a/NEWS
+++ b/NEWS
@@ -4,31 +4,35 @@ News
 Pyclewn 2.0
 -----------
 
-.. January 8, 2015
+.. January 9, 2015
 
 Changes
 ^^^^^^^
 
 * Windows support has been removed. Pyclewn requires now Python 2.7 or Python
-  3.1 or newer and the same source code is used for all the Python versions.
+  3.1 or newer and the same source code is used for all those Python versions.
   pdb-clone must now be installed separately from PyPi.
 
-* The pyclewn command line optional argument selects which debugger to run.
+* When started from a terminal, pyclewn is now started with the command
+  ``python -m clewn`` followed by options if any and an optional argument that
+  selects which debugger to run.
 
 * The terminal spawned by the ``inferiortty`` command is now automatically
   closed at the end of each debugging session.
 
-* Use now asyncio (or trollius on Python versions that do not support asyncio,
-  i.e. version 2.7 or older than 3.4) instead of the deprecated asyncore
-  Python module.
+* pyclewn uses now asyncio (or trollius on Python versions that do not support
+  asyncio, i.e. version 2.7 or older than 3.4) instead of the deprecated
+  asyncore Python module.
 
-* Local installation is done using the user scheme instead of the home scheme.
+* Local installation is done using the Python user scheme instead of the home
+  scheme.
 
 Bug fix
 ^^^^^^^
 
-* The controlling terminal of the gdb inferior process is now correctly set to
-  the terminal that is used to start the ``pyclewn`` program.
+* When pyclewn is started from a terminal, the controlling terminal of the gdb
+  inferior process is now correctly set to the terminal from where pyclewn has
+  been started.
 
 Pyclewn 1.11
 ------------
