--- a/INSTALL
+++ b/INSTALL
@@ -7,14 +7,31 @@ Required
 +---------------------+-----------------------------------------------------+
 | Python              | Vim                                                 |
 +=====================+=====================================================+
-| Python 2.7 or above | Vim 7.0 or above with the **netbeans_intg** feature |
-|                     | and the  **autocmd** feature enabled (netbeans and  |
+| Python 2.7 or       | Vim 7.0 or above with the **netbeans_intg** feature |
+| Python 3.1 or newer | and the  **autocmd** feature enabled (netbeans and  |
 |                     | autocmd are enabled on most distributions).         |
 +---------------------+-----------------------------------------------------+
 
-To use Vim as a front-end to the pdb debugger, pyclewn requires that
-``pdb-clone`` be installed separately. Install ``pdb-clone`` from PyPi at
-pdb-clone_.
+
+Install with pip
+----------------
+
+The preferred method to install pyclewn is pip_. Run the following command to
+install pyclewn::
+
+    pip install pyclewn
+
+This will also install ``pdb-clone``. This will also install ``trollius`` and
+its dependencies on Python 2.7 or on Python versions older than 3.4.
+
+Local installation of pyclewn and the Vim runtime files
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+Use a local installation when you do not have root privileges and those are
+required to install Python packages or to install the vim runtime files on your
+system::
+
+    vimdir=$HOME/.vim pip install --user pyclewn
 
 
 Install from source
@@ -25,7 +42,7 @@ setup script to install pyclewn::
 
     tar xzf pyclewn-2.0.tar.gz
     cd pyclewn-2.0
-    python setup.py install --force
+    python setup.py install
 
 You can now use the ``:help pyclewn`` command within vim, to get access to the
 documentation.
@@ -34,15 +51,18 @@ The installation process uses the environment variable EDITOR to invoke Vim
 and install the pyclewn help file. ``gvim`` is used when this environment
 variable is not found.
 
-When the python version is 2.7 or older than 3.4, you must also install
-``trollius`` from PyPi at trollius_.
+To use Vim as a front-end to the pdb debugger, pyclewn requires that
+``pdb-clone`` be installed separately. Install ``pdb-clone`` from PyPI at
+pdb-clone_.
 
+When the Python version is 2.7 or older than 3.4, you must also install
+``trollius`` from PyPI at trollius_.
 
 Local installation from source
 ------------------------------
 
 Use a local installation when you do not have root privileges and those are
-required to install python packages or to install the vim runtime files on your
+required to install Python packages or to install the vim runtime files on your
 system.
 
 Local installation of pyclewn
@@ -51,9 +71,6 @@ Local installation of pyclewn
 Local installation of pyclewn is done using the ``user scheme``::
 
     python setup.py install --user
-
-When the python version is 2.7 or older than 3.4, you must also install
-``trollius`` from PyPi at trollius_.
 
 Vim runtime files
 ^^^^^^^^^^^^^^^^^
@@ -66,20 +83,8 @@ files::
     vimdir=$HOME/.vim python setup.py install --user
 
 
-Uninstall
----------
-
-To uninstall pyclewn on unix, run the same command that you have been using
-for installing pyclewn and record the list of files that are being installed
-into ``files.txt`` with the ``--record`` option. For example::
-
-    python setup.py install --user --record files.txt
-
-Then remove all the installed files::
-
-    rm $(cat files.txt)
-
-.. _trollius: http://pypi.python.org/pypi/trollius
+.. _pip: http://pip.pypa.io/en/latest/
 .. _pdb-clone: http://pypi.python.org/pypi/pdb-clone
+.. _trollius: http://pypi.python.org/pypi/trollius
 .. vim:filetype=rst:tw=78:ts=8:et:
 
