--- a/INSTALL
+++ b/INSTALL
@@ -13,29 +13,56 @@ Required
 +---------------------+-----------------------------------------------------+
 
 
-Install with pip
-----------------
+Quick start
+-----------
 
-The preferred method to install pyclewn is pip_. Run the following command to
-install pyclewn::
+A two steps installation.
+
+First step, install the Python package::
 
     pip install pyclewn
 
-This will also install ``pdb-clone``. This will also install ``trollius`` and
-its dependencies on Python 2.7 or on Python versions older than 3.4.
+This will install the Python ``clewn`` package and its dependencies, and also
+create a vimball named ``pyclewn-2.0.vmb`` in the current directory.
 
-Local installation of pyclewn and the Vim runtime files
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+Second step, install the Vim runtime files. The vimball is sourced to install
+the Vim runtime files::
+
+Open ``pyclewn-2.0.vmb`` with Vim and run the ``:so %`` command. See the
+vimball documentation ``:help vimball``.
+
+
+Installing with pip
+-------------------
+
+The preferred method to install pyclewn is pip_, see above. pip is
+automatically installed with Python version 3.4 and newer. It is available on
+most linux distributions as a package and otherwise it is easy to install
+manually, see pip_.
+
+pip will also install ``pdb-clone``.
+
+pip will also install ``trollius`` and its dependencies on Python 2.7 or on
+Python versions older than 3.4.
 
 Use a local installation when you do not have root privileges and those are
-required to install Python packages or to install the vim runtime files on your
-system::
+required to install Python packages::
 
-    vimdir=$HOME/.vim pip install --user pyclewn
+    pip install --user pyclewn
+
+The ``pyclewn-2.0.vmb`` vimball contains the following runtime files::
+
+    autoload/pyclewn.vim            # The pyclewn plugin.
+    plugin/pyclewn.vim
+    doc/pyclewn.txt                 # The help.
+    syntax/dbgvar.vim               # The pyclewn syntax file.
+    macros/.pyclewn_keys.gdb        # The 'Cmapkeys' files.
+    macros/.pyclewn_keys.pdb
+    macros/.pyclewn_keys.simple
 
 
-Install from source
--------------------
+Installing from source
+----------------------
 
 Unpack the tarball, change directory to the distribution directory and run the
 setup script to install pyclewn::
@@ -44,13 +71,6 @@ setup script to install pyclewn::
     cd pyclewn-2.0
     python setup.py install
 
-You can now use the ``:help pyclewn`` command within vim, to get access to the
-documentation.
-
-The installation process uses the environment variable EDITOR to invoke Vim
-and install the pyclewn help file. ``gvim`` is used when this environment
-variable is not found.
-
 To use Vim as a front-end to the pdb debugger, pyclewn requires that
 ``pdb-clone`` be installed separately. Install ``pdb-clone`` from PyPI at
 pdb-clone_.
@@ -58,29 +78,14 @@ pdb-clone_.
 When the Python version is 2.7 or older than 3.4, you must also install
 ``trollius`` from PyPI at trollius_.
 
-Local installation from source
-------------------------------
-
 Use a local installation when you do not have root privileges and those are
-required to install Python packages or to install the vim runtime files on your
-system.
-
-Local installation of pyclewn
-^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-
-Local installation of pyclewn is done using the ``user scheme``::
+required to install Python packages::
 
     python setup.py install --user
 
-Vim runtime files
-^^^^^^^^^^^^^^^^^
-
-Local installation of vim runtime files is done by setting the ``vimdir``
-environment variable set to your personal vim runtime directory during
-installation. For example, local installation of pyclewn and of vim runtime
-files::
-
-    vimdir=$HOME/.vim python setup.py install --user
+The runtime files must also be installed as described in the first section.
+The ``pyclewn-2.0.vmb`` vimball is created in the current directory as a
+result of running the ``python setup.py install`` command.
 
 
 .. _pip: http://pip.pypa.io/en/latest/
